# bevy_assetio_zip

./: Cargo.toml  README.md  README.tpl  asset_config.toml  build.rs  justfile
bevy_assetio_zip/: Cargo.toml  asset_config.toml  build.rs
bevy_assetio_zip/examples/: asset_bundle.rs
bevy_assetio_zip/src/: lib.rs
bevy_assetio_zip_bundler/: Cargo.toml
bevy_assetio_zip_bundler/src/: lib.rs
examples/: assets_from_zip.rs
src/: lib.rs  xor.rs
