[package]
name = "bevy_advanced_assets"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[dependencies]
bevy = "0.4"
zip = "0.5.9"

[patch.crates-io]
bevy = { path = "../../other/bevy" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

zip = "0.5.9"
walkdir = "2.3.1"
