[package]
name = "bevy_assetio_zip"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[features]
default = []
# Attempt to support the latest Bevy version from master
bevy-unstable = []

[dependencies]
bevy = "0.4"
zip = "0.5.9"
xorio = "0.1.0"

[build-dependencies]
bevy_assetio_zip_bundler = { path = "../bevy_assetio_zip_bundler" }